--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,14 @@ blinker==1.8.2
 click==8.1.7
 colorama==0.4.6
 environs==11.0.0
+exceptiongroup==1.2.1
 Flask==3.0.3
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
 importlib_metadata==8.0.0
 importlib_resources==6.4.0
+iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 logging==0.4.9.6
@@ -19,9 +21,13 @@ mysql-connector-python==9.0.0
 mysql-connector-python-rf==2.2.2
 mysqlclient==2.2.4
 packaging==24.1
+pluggy==1.5.0
 PyMySQL==1.1.1
+pytest==8.2.2
+pytest-flask==1.3.0
 python-dotenv==1.0.1
 SQLAlchemy==2.0.31
+tomli==2.0.1
 typing_extensions==4.12.2
 Werkzeug==3.0.3
 zipp==3.19.2
